feat: initial notification implemention
